# ghostboy

./: Bib.md  Cargo.toml  README.md  index.html
assets/enemies/skelly/: arrow.aseprite  v1.aseprite
assets/enemies/suicido/: explosion.aseprite  pink_palatte.pal  pinkball.aseprite  pinkball_light.aseprite
assets/environment/: SpikesTileset.aseprite  ephplat.aseprite  ground_tileset.aseprite  guillo.aseprite  mountains.aseprite  platform_tileset.aseprite  play_picture1.aseprite  play_picture2.aseprite
assets/gboy/: die.aseprite  initial.aseprite  v1.aseprite
assets/juice/: fades.aseprite  smoke.aseprite
assets/ldtk/: play.ldtk  world.ldtk
assets/menu/: redeath.aseprite
src/: consts.rs  input.rs  macros.rs  main.rs  math.rs  roots.rs  shorthand.rs  types.rs
src/anim/: anim_macros.rs  anim_man.rs  anim_mat.rs  mod.rs
src/anim/defns/: example.rs  gboy.rs  (+7 more)
src/camera/: camera_movement.rs  mod.rs
src/debug/: draw_hitboxes.rs  mod.rs
src/enemies/: mod.rs  skelly.rs
src/environment/: arrow.rs  guillo.rs  mod.rs  parallax.rs  wall.rs  wallish.rs
src/gboy/: control.rs  death.rs  gboy_fsm.rs  mod.rs  spawn.rs
src/juice/: camera_shake.rs  fade.rs  mod.rs  sounds.rs  storm.rs
src/layer/: mod.rs  shade_remap_mat.rs
src/menu/: mod.rs  pause.rs  title.rs  world_select.rs
src/my_ldtk/: mod.rs  my_ldtk_levels.rs  my_ldtk_maint.rs
src/physics/: bullet_time.rs  colls.rs  dyno.rs  hbox.rs  logic.rs  maint.rs  mod.rs  physics_maint.rs  pos.rs  statics.rs  triggers.rs
src/sound/: effect.rs  effect_defns.rs  mod.rs  music.rs
src/state/: computed.rs  mod.rs
(+21 files in other folders)
